<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="1000dp"
    android:background="#DB9F76">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".triangle"
    android:background="@drawable/grad2"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/inputs1"
        android:background="@drawable/inputbg2"
        android:hint = "@string/inputs1Text"
        android:textColorHint= "#B0C4DE"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:textColor="#FFF" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/inputs2"
        android:background="@drawable/inputbg2"
        android:hint = "@string/inputs2Text"
        android:textColorHint= "#B0C4DE"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#FFF" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/inputs3"
        android:background="@drawable/inputbg2"
        android:hint = "@string/inputs3Text"
        android:textColorHint= "#B0C4DE"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#FFF" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcButtonText"
        android:id="@+id/triangleCalcButton"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/triTypeText"
        android:id="@+id/triTypeText"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:textColor="#FFFFFF"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="With an area of: "
            android:id="@+id/triAreaTextPre"
            android:layout_gravity="center_horizontal"
            android:textColor="#90EE90"
            android:padding="5dp"
            android:layout_weight="1"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="(Area of Triangle)"
            android:id="@+id/triAreaTextOutput"
            android:layout_gravity="center_horizontal"
            android:textColor="#FFFFFF"
            android:padding="5dp"
            android:layout_weight=".5"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text=" units squared"
            android:id="@+id/triAreaTextPost"
            android:layout_gravity="center_horizontal"
            android:textColor="#90EE90"
            android:padding="5dp"
            android:layout_weight="1"
            android:layout_margin="5dp" />

        </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewTriangle"
        android:contentDescription="@string/triDescriptionText"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/tcicon"
        android:layout_margin="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isoCheckText"
        android:id="@+id/isosCheckText"
        android:layout_gravity="center_horizontal"
        android:layout_margin="2dp"
        android:textColor="#90EE90" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scaleneCheckText"
        android:id="@+id/scaleneCheckText"
        android:layout_gravity="center_horizontal"
        android:layout_margin="2dp"
        android:textColor="#90EE90" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creditText"
        android:id="@+id/creditText"
        android:layout_gravity="center_horizontal"
        android:textColor="#FFF"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp" />

</LinearLayout>
</ScrollView>